# trendy

./: .dockerignore  Procfile  README.md  agent.py  app.py  fly.toml  pyproject.toml  test_trends.py  trends.py
