[tool.poetry]
name = "trendy"
version = "0.1.0"
description = ""
authors = ["Ekaterina Krivich <ekaterinak@heathmont.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
openai = "^0.28.1"
langchain = "^0.0.319"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
