[tool.poetry]
name = "trendy"
version = "0.1.0"
description = ""
authors = ["Ekaterina Krivich <ekaterinak@heathmont.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
Flask = "^3.0.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
